--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-redux": "^7.1.16",
+    "husky": "^5.1.1",
+    "lint-staged": "^10.5.4",
     "node-sass": "^5.0.0",
+    "prettier": "^2.2.1",
     "rbx": "^2.2.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -19,6 +22,11 @@
     "react-scripts": "4.0.3",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
+  },
+  "lint-staged": {
+    "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
+      "prettier --write"
+    ]
   },
   "scripts": {
     "start": "react-scripts start",
@@ -44,5 +52,10 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {}
+  "devDependencies": {},
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  }
 }
