--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-redux": "^7.1.16",
+    "@types/uuid": "^8.3.0",
     "husky": "^5.1.1",
     "lint-staged": "^10.5.4",
     "node-sass": "^5.0.0",
@@ -20,7 +21,9 @@
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "react-scripts": "4.0.3",
+    "redux-devtools-extension": "^2.13.8",
     "typescript": "^4.1.2",
+    "uuid": "^8.3.2",
     "web-vitals": "^1.0.1"
   },
   "lint-staged": {
