--- a/package.json
+++ b/package.json
@@ -58,7 +58,9 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
+  },
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged"
