--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "gtd",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://khanguslee.github.io/GTD",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
     "@fortawesome/free-regular-svg-icons": "^5.15.2",
@@ -10,12 +9,15 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/google-one-tap": "^1.0.0",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-redux": "^7.1.16",
     "@types/uuid": "^8.3.0",
+    "dotenv": "^8.2.0",
+    "google-one-tap": "^1.0.1",
     "husky": "^5.1.1",
     "lint-staged": "^10.5.4",
     "node-sass": "^5.0.0",
@@ -25,6 +27,7 @@
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "react-scripts": "4.0.3",
+    "realm-web": "^1.2.1",
     "redux-devtools-extension": "^2.13.8",
     "typescript": "^4.1.2",
     "uuid": "^8.3.2",
@@ -39,9 +42,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -61,9 +62,7 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "gh-pages": "^3.1.0"
-  },
+  "devDependencies": {},
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged"
