--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-redux": "^7.1.16",
+    "@types/redux-saga-routines": "^3.1.1",
     "@types/uuid": "^8.3.0",
     "dotenv": "^8.2.0",
     "google-one-tap": "^1.0.1",
@@ -29,6 +30,8 @@
     "react-scripts": "4.0.3",
     "realm-web": "^1.2.1",
     "redux-devtools-extension": "^2.13.8",
+    "redux-saga": "^1.1.3",
+    "redux-saga-routines": "^3.2.3",
     "typescript": "^4.1.2",
     "uuid": "^8.3.2",
     "web-vitals": "^1.0.1"
