--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/google-one-tap": "^1.0.0",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-redux": "^7.1.16",
+    "@types/redux-saga-routines": "^3.1.1",
     "@types/uuid": "^8.3.0",
+    "dotenv": "^8.2.0",
+    "google-one-tap": "^1.0.1",
     "husky": "^5.1.1",
     "lint-staged": "^10.5.4",
     "node-sass": "^5.0.0",
@@ -24,7 +28,10 @@
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "react-scripts": "4.0.3",
+    "realm-web": "^1.2.1",
     "redux-devtools-extension": "^2.13.8",
+    "redux-saga": "^1.1.3",
+    "redux-saga-routines": "^3.2.3",
     "typescript": "^4.1.2",
     "uuid": "^8.3.2",
     "web-vitals": "^1.0.1"
